data/derived/comb/progs/unify/prog8548.ml.out
Characters 138-155:
  | Sine sin -> Printf.printf ("sin( %s )",sin);
                              ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type
         ('c, out_channel, unit) format =
           ('c, out_channel, unit, unit, unit, unit)
           CamlinternalFormatBasics.format6
